--- a/docs/stylesheets/custom.css
+++ b/docs/stylesheets/custom.css
@@ -3,6 +3,14 @@
     --md-tooltip-width: 500px
 }
 
+body[data-md-color-primary="black"] .excalidraw  svg  {
+  filter: invert(100%) hue-rotate(180deg);
+}
+
+body[data-md-color-primary="black"] .excalidraw svg rect {
+  fill: transparent;
+}
+
 h2.doc.doc-heading {
   border-top: 2px solid rgba(0, 0, 0);
   padding-top: 48px;
