--- a/docs/stylesheets/custom.css
+++ b/docs/stylesheets/custom.css
@@ -1,3 +1,37 @@
+/* Indentation. */
+div.doc-contents:not(.first) {
+  padding-left: 25px;
+  border-left: .05rem; /*solid var(--md-typeset-table-color);*/
+}
+div.doc-class > div.doc-contents {
+  padding-left: 25px;
+  border-left: .05rem solid var(--md-typeset-table-color);
+}
+
+/* Mark external links as such. */
+/* This is taken from mkdocs-string python tips
+https://primer.style/octicons/arrow-up-right-24
+a.external::after,
+a.autorefs-external::after {
+  mask-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M18.25 15.5a.75.75 0 00.75-.75v-9a.75.75 0 00-.75-.75h-9a.75.75 0 000 1.5h7.19L6.22 16.72a.75.75 0 101.06 1.06L17.5 7.56v7.19c0 .414.336.75.75.75z"></path></svg>');
+  -webkit-mask-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M18.25 15.5a.75.75 0 00.75-.75v-9a.75.75 0 00-.75-.75h-9a.75.75 0 000 1.5h7.19L6.22 16.72a.75.75 0 101.06 1.06L17.5 7.56v7.19c0 .414.336.75.75.75z"></path></svg>');
+  content: ' ';
+
+  display: inline-block;
+  vertical-align: middle;
+  position: relative;
+
+  height: 1em;
+  width: 1em;
+  background-color: var(--md-typeset-a-color);
+}
+
+a.external:hover::after,
+a.autorefs-external:hover::after {
+  background-color: var(--md-accent-fg-color);
+}
+*/
+
 [data-md-color-scheme="default"] {
   --doc-label-instance-attribute-fg-color: #0079ff;
   --doc-label-property-fg-color: #00dfa2;
@@ -78,10 +112,12 @@ code.highlight.language-python span.kc {
 }
 
 
+/*
 h3.doc.doc-heading {
   border-top: 1px solid rgba(0, 0, 0, 0.2);
   padding-top: 48px;
 }
+*/
 
 a.md-nav__link--passed {
   padding-left: 10px;
