--- a/docs/stylesheets/custom.css
+++ b/docs/stylesheets/custom.css
@@ -1,11 +1,16 @@
-/* Indentation. */
-div.doc-contents:not(.first) {
-  padding-left: 25px;
-  border-left: .05rem; /*solid var(--md-typeset-table-color);*/
+/* api doc attribute cards */
+div.doc-class > div.doc-contents > div.doc-children > div.doc-object {
+  padding-right: 20px;
+  padding-left: 20px;
+  border-radius: 15px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+  margin-right: 0px;
+  border-color: rgba(0, 0, 0, 0.2);
+  border-width: 1px;
+  border-style: solid;
 }
-div.doc-class > div.doc-contents {
-  padding-left: 25px;
-  border-left: .05rem solid var(--md-typeset-table-color);
 }
 
 /* Mark external links as such. */
@@ -59,6 +64,7 @@ a.autorefs-external:hover::after {
     --md-tooltip-width: 500px;
 }
 
+/*
 .doc.doc-label.doc-label-instance-attribute code {
   background-color: var(--doc-label-instance-attribute-bg-color);
   color: var(--doc-label-instance-attribute-fg-color);
@@ -90,6 +96,7 @@ a.autorefs-external:hover::after {
   padding-right: 10px;
   padding-left: 10px;
 }
+*/
 
 
 body[data-md-color-primary="black"] .excalidraw  svg  {
@@ -101,7 +108,7 @@ body[data-md-color-primary="black"] .excalidraw svg rect {
 }
 
 h2.doc.doc-heading {
-  border-top: 2px solid rgba(0, 0, 0);
+  /*border-top: 2px solid rgba(0, 0, 0);*/
   padding-top: 48px;
 }
 
@@ -119,6 +126,7 @@ h3.doc.doc-heading {
 }
 */
 
+/*
 a.md-nav__link--passed {
   padding-left: 10px;
 }
@@ -132,6 +140,7 @@ a.md-nav__link--active {
 h3 .doc-heading code {
   font-size: 16px;
 }
+*/
 
 /*
 .doc.doc-object.doc-class h2.doc.doc-heading {
@@ -141,6 +150,5 @@ h3 .doc-heading code {
 
 .doc-heading code {
   font-weight: normal;
-  font-family: "Roboto Mono", "SFMono-Regular", Consolas, "Courier New", Courier,
-    monospace;
+  font-family: "Roboto Mono", "SFMono-Regular", Consolas, "Courier New", Courier, monospace;
 }
