doc: Add description to mkdocs.yml
Also adds a note about being allowed to remove the css

--- a/docs/stylesheets/custom.css
+++ b/docs/stylesheets/custom.css
@@ -1,3 +1,7 @@
+/* If anything is breaking from this css, please feel free to
+* remove it.
+*/
+
 /* Highlight None with color  inside code blocks */
 code.highlight.language-python span.kc {
   color: var(--md-code-hl-keyword-color);
